@@ -1,3 +1,8 @@
+Tue Mar 23 14:29:22 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
+
+	* htlib/HtURLCodec.cc (~HtURLCodec): Add missing deletion of
+	myWordCodec.
+
 Tue Mar 23 14:18:16 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
 
 	* htdig/PDF.cc(parseString): Use minimum_word_length instead of
